--- a/article.html
+++ b/article.html
@@ -74,7 +74,7 @@
       <div>
         <h3>Email Newsletter</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <form name="contact" method="POST" data-netlify="true"></form>
+        <form name="contact" method="POST" netlify></form>
           <input type="email" name="email" placeholder="Enter Email...">
           <input type="submit" value="Subscribe" class="btn btn-primary">
         </form>
